--- a/css/common.css
+++ b/css/common.css
@@ -1,11 +1,22 @@
 * {
   box-sizing: border-box;
+
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -23,13 +34,17 @@ button {
   cursor: pointer;
 }
 
-.gallery{
+.gallery {
   display: flex;
+  gap: 10px;
+  width: 100%; /* Твоя желаемая ширина */
+  height: 100%; /* Твоя желаемая высота */
+  overflow: hidden;
   list-style: none;
-  justify-content: space-between;
-  align-items: flex-end;
 }
 
-.gallery img {
-  max-width: 500px;
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
